--- a/README
+++ b/README
@@ -2,17 +2,17 @@ NAME
     Dist::Requires - Identify requirements for a distribution
 
 VERSION
-    version 0.003
+    version 0.004
 
 SYNOPSIS
       use Dist::Requires;
       my $dr = Dist::Requires->new();
 
       # From a distribution archive file...
-      my $requires = $dr->requires(dist => 'Foo-Bar-1.2.tar.gz');
+      my $prereqs = $dr->prerequisites(dist => 'Foo-Bar-1.2.tar.gz');
 
       # From an unpacked distribution directory...
-      my $requires = $dr->requires(dist => 'Foo-Bar-1.2');
+      my $prereqs = $dr->prerequisites(dist => 'Foo-Bar-1.2');
 
 DESCRIPTION
     Dist::Requires answers the question "Which packages are required to
@@ -55,7 +55,7 @@ ATTRIBUTES
     any filter to be applied, then just give a reference to any empty hash.
 
 METHODS
-  requires( dist => $SOME_PATH )
+  prerequisites( dist => $SOME_PATH )
     Returns the requirements of the distribution as a hash of PACKAGE_NAME
     => VERSION pairs. The c<dist> argument can be the path to either a
     distribution archive file (e.g. Foo-Bar-1.2.tar.gz) or an unpacked
