Import of THALJEF/Dist-Requires-0.005 from CPAN.
gitpan-cpan-distribution: Dist-Requires
gitpan-cpan-version:      0.005
gitpan-cpan-path:         THALJEF/Dist-Requires-0.005.tar.gz
gitpan-cpan-author:       THALJEF
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -2,7 +2,7 @@ NAME
     Dist::Requires - Identify requirements for a distribution
 
 VERSION
-    version 0.004
+    version 0.005
 
 SYNOPSIS
       use Dist::Requires;
@@ -113,8 +113,8 @@ SUPPORT
 
     *   CPAN Testers Matrix
 
-        The CPAN Testers Matrix is a website that provides a visual way to
-        determine what Perls/platforms PASSed for a distribution.
+        The CPAN Testers Matrix is a website that provides a visual overview
+        of the test results for a distribution on various Perls/platforms.
 
         <http://matrix.cpantesters.org/?dist=Dist-Requires>
 
