Import of THALJEF/Dist-Requires-0.008 from CPAN.
gitpan-cpan-distribution: Dist-Requires
gitpan-cpan-version:      0.008
gitpan-cpan-path:         THALJEF/Dist-Requires-0.008.tar.gz
gitpan-cpan-author:       THALJEF
gitpan-cpan-maturity:     released

--- a/README
+++ b/README
@@ -1,27 +1,36 @@
 NAME
-    Dist::Requires - Identify requirements for a distribution
+    Dist::Requires - Identify prerequisites for a distribution
 
 VERSION
-    version 0.007
+    version 0.008
 
 SYNOPSIS
       use Dist::Requires;
       my $dr = Dist::Requires->new();
 
-      # From a distribution archive file...
-      my $prereqs = $dr->prerequisites(dist => 'Foo-Bar-1.2.tar.gz');
+      # From a packed distribution archive file...
+      my %prereqs = $dr->prerequisites(dist => 'Foo-Bar-1.2.tar.gz');
 
       # From an unpacked distribution directory...
-      my $prereqs = $dr->prerequisites(dist => 'Foo-Bar-1.2');
+      my %prereqs = $dr->prerequisites(dist => 'Foo-Bar-1.2');
 
 DESCRIPTION
-    Dist::Requires answers the question "Which packages are required to
-    install a distribution with a particular version of perl?" The
-    distribution can be in an archive file or unpacked into a directory. By
-    default, the requirements will only include packages that are newer than
-    the ones in the perl core (if they were in the core at all). You can
-    turn this feature off to get all requirements. You can also control
-    which version of perl to consider.
+    Dist::Requires reports the packages (and their versions) that are
+    required to configure, test, build, and install a distribution. The
+    distribution may be either a packed distribution archive or an unpacked
+    distribution directory. By default, the results will exclude
+    requirements that are satisfied by the perl core.
+
+    Dist::Requires is intended for discovering requirements in the same
+    manner and context that cpan and cpanm do it. It is specifically
+    designed to support Pinto, so I don't expect this module to be useful to
+    you unless you are doing something that deals directly with the CPAN
+    toolchain.
+
+    Dist::Requires does not recurse into dependencies, it does not scan
+    source files for packages that you "use" or "require", it does not
+    search for distribution metadata on CPAN, and it does not generate
+    pretty graphs. If you need those things, please "SEE ALSO".
 
 CONSTRUCTOR
   new( %attributes )
@@ -35,16 +44,16 @@ ATTRIBUTES
     distribution. Defaults to the perl that loaded this module. NOTE: this
     attribute is not configurable at this time.
 
-  target_perl_version => $FLOAT
+  target_perl_version => $VERSION
     The core module list for the specified perl version will be used to
     filter the requirements. This only matters if you're using the default
     package filter. Defaults to the version of the perl specified by the
     "perl" attribute. Can be specified as a decimal number, a dotted version
     string, or a version object.
 
-  timeout => $INT
+  timeout => $INTEGER
     Sets the timeout (in seconds) for running the distribution's
-    configuration step. Defaults to 15 seconds.
+    configuration step. Defaults to 30 seconds.
 
   filter => $HASHREF
     Given a hashref of MODULE_NAME => VERSION pairs, any distribution
@@ -57,28 +66,34 @@ ATTRIBUTES
 METHODS
   prerequisites( dist => $SOME_PATH )
     Returns the requirements of the distribution as a hash of PACKAGE_NAME
-    => VERSION pairs. The c<dist> argument can be the path to either a
+    => VERSION pairs. The "dist" argument can be the path to either a
     distribution archive file (e.g. Foo-Bar-1.2.tar.gz) or an unpacked
     distribution directory (e.g. Foo-Bar-1.2). The requirements will be
     filtered according to the values specified by the "filter" attribute.
 
-LIMITATIONS
-    Much of Dist::Requires was inspired (even copied) from CPAN and cpanm.
-    However, both of those are much more robust and better at handling old
-    versions of toolchain modules, broken metadata, etc. Dist::Requires
-    requires relatively new toolchain modules, and will probably only work
-    if given a well-packaged distribution with sane metadata. Perhaps
-    Dist::Metadata will become more robust in the future.
-
 BEWARE
     Dist::Requires will attempt to configure the distribution using whatever
-    build mechanism it provides (i.e. Module::Build or ExtUtils::MakeMaker)
-    and then extract the requirements from the resulting metadata files.
-    That means you could be executing unsafe code. However, this is no
-    different from what cpanm and cpan do when you install a distribution.
+    build mechanism it provides (e.g. Module::Build or ExtUtils::MakeMaker
+    or Module::Install) and then extract the requirements from the resulting
+    metadata files. That means you could be executing unsafe code. However,
+    this is no different from what cpanm and cpan do when you install a
+    distribution.
 
 SEE ALSO
+    Neil Bowers has written an excellent comparison of various modules for
+    finding dependencies here <http://neilb.org/reviews/dependencies.html>.
+
+    CPAN::Dependency
+
+    CPAN::FindDependencies
+
+    Devel::Dependencies
+
     Module::Depends
+
+    Module::Depends::Tree
+
+    Perl::PrereqScanner
 
 SUPPORT
   Perldoc
